tests/compile_fail/not-impl.stderr
error[E0277]: the trait bound `Bar: std::default::Default` is not satisfied
 --> $DIR/not-impl.rs:7:8
  |
7 |     a: Bar,
  |        ^^^ the trait `std::default::Default` is not implemented for `Bar`
  |
  = note: required because of the requirements on the impl of `default_boxed::DefaultBoxed` for `Bar`
  = note: required by `default_boxed::DefaultBoxed::default_in_place`
